[gd_scene load_steps=4 format=3 uid="uid://capd6ovohwqj3"]

[ext_resource type="Script" path="res://Scenes/Core/Tower_select.gd" id="1_ock5d"]
[ext_resource type="Texture2D" uid="uid://dxmj182aerwa8" path="res://Assets/TD assets/td-gui/PNG/levels/btton_empty.png" id="2_smvv2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_or731"]
size = Vector2(152, 150)

[node name="TowerSelect" type="Node2D"]
script = ExtResource("1_ock5d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_smvv2")

[node name="Label" type="Label" parent="Sprite2D"]
offset_left = -27.0
offset_top = -14.0
offset_right = 29.0
offset_bottom = 9.0
text = "Testing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -7)
shape = SubResource("RectangleShape2D_or731")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
